[package]
name = "qa_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
itertools = "0.11.0"
promptly = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
